<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_register_bg_icon"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
    <RelativeLayout
        android:id="@+id/login_back_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height_size"
        >

        <LinearLayout
            android:id="@+id/login_back"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal"
            >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@drawable/new_back_icon"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/margin_left_15"
            android:paddingRight="15dp"
            />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/login_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_back_rl"
        android:layout_marginTop="260dp"
        android:background="@drawable/login_layout_bg_normal"
        android:layout_marginLeft="@dimen/search_height_30"
        android:layout_marginRight="@dimen/search_height_30"
        >
        <LinearLayout
            android:id="@+id/account_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left_15"
                android:textSize="@dimen/big_size_16"
                android:textColor="@color/text_color_deep_gray"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="账号"
                />
            <EditText
                android:id="@+id/login_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:layout_marginLeft="@dimen/margin_left_14"
                android:textSize="@dimen/normal_size_14"
                android:textColor="@color/text_color_gray"
                android:textColorHint="@color/colorDark"
                android:layout_weight="1"
                android:digits="@string/new_login_digits"
                android:inputType="phone"
                />
        </LinearLayout>
        <View
            android:id="@+id/account_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/background"
            android:layout_below="@id/account_layout"
            >
        </View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:orientation="horizontal"
            android:layout_below="@id/account_line"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_tx"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_left_15"
                android:textColor="@color/text_color_deep_gray"
                android:textSize="@dimen/big_size_16"
                android:gravity="center"
                />
            <EditText
                android:id="@+id/login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:background="@null"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_left_14"
                android:textSize="@dimen/normal_size_14"
                android:textColor="@color/text_color_gray"
                android:textColorHint="@color/colorDark"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:digits="@string/new_register_digits"
                android:maxLength="20"
                />
        </LinearLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/login_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        android:layout_marginLeft="@dimen/search_height_30"
        android:layout_marginRight="@dimen/search_height_30"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/new_contact_service_bt_bg"
        android:textSize="@dimen/large_size_18"
        android:layout_below="@id/login_rl"
        android:layout_marginTop="@dimen/margin_top_25"
        />
    <LinearLayout
        android:id="@+id/forget_password_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/login_bt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_bottom_20"
        android:layout_gravity="center_horizontal"
        >
        <TextView
            android:id="@+id/forget_password_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textSize="@dimen/normal_size_14"
            android:textColor="@color/color_999999"
            />
        <TextView
            android:id="@+id/register_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:layout_marginLeft="@dimen/margin_left_4"
            android:textSize="@dimen/normal_size_14"
            android:textColor="@color/color_999999"
            />
    </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/contact_customer_service_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_size_14"
        android:textColor="@color/color_999999"
        android:text="@string/contact_customer_service_hint"
        android:layout_marginBottom="@dimen/height_35"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>