<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    >
    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="90.5dp"
        android:orientation="vertical"
        android:background="@drawable/group_label_bg"
        >
        <TextView
            android:id="@+id/take_photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:text="@string/take_picture"
            android:textSize="@dimen/large_size_18"
            android:textColor="@color/main_color"
            android:gravity="center"
            />
        <include layout="@layout/hor_line"></include>
        <TextView
            android:id="@+id/choose_from_album"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:text="@string/choose_from_the_album"
            android:textSize="@dimen/large_size_18"
            android:textColor="@color/main_color"
            android:gravity="center"
            />
    </LinearLayout>
    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/large_size_18"
        android:text="@string/cancel"
        android:textColor="@color/main_color"
        android:background="@drawable/group_label_bg"
        />
</LinearLayout>
</LinearLayout>